--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -105,4 +104,4 @@ venv.bak/
 .mypy_cache/
 
 #glove file
-server/files/glove.6B.100d.txt
+server\Fake NEWS\files/glove.6B.100d.txt
