--- a/lib/manifest.json
+++ b/lib/manifest.json
@@ -24,7 +24,7 @@
           "https://*/*"
         ],
         "js" : [
-         "scripts/content/youtube_cb.js","scripts/content/twitter_cb.js","scripts/content/facebook_cb.js","scripts/content/sss.js"
+        "scripts/content/youtube.js","scripts/content/twitter.js","scripts/content/facebook.js","scripts/content/sss.js"
         ],
         "run_at" : "document_idle",
         "all_frames" : false
@@ -44,4 +44,4 @@
       "96" : "assets/icon/96.png"
     }
 }
-  
+   
