final changes tested all features

--- a/lib/manifest.json
+++ b/lib/manifest.json
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 {
     "manifest_version": 2,
     "version": "1.0.0",
@@ -25,105 +25,9 @@
           "https://*/*"
         ],
         "js" : [
-        "scripts/content/youtube_cb_hs.js","scripts/content/twitter_cb_hs.js","scripts/content/facebook_cb_hs.js","scripts/content/sss.js"
+         "scripts/content/youtube_cb_hs.js","scripts/content/facebook_cb_hs.js","scripts/content/sss.js"
         ],
-        "run_at" : "document_idle",
-        "all_frames" : false
-      }
-    ],
-"web_accessible_resources": [
-    "common/profanity_list_en.json"
-],
-
-    "permissions": [
-      "tabs","notifications","storage","contextMenus"
-    ],
-    "icons" : {
-      "36" : "assets/icon/36.png",
-      "48" : "assets/icon/48.png",
-      "72" : "assets/icon/72.png",
-      "96" : "assets/icon/96.png"
-    }
-}
-   
-||||||| 94ace35
-{
-    "manifest_version": 2,
-    "version": "1.0.0",
-    "name": "Social Street Smart",
-    "short_name": "SSS", 
-    "description": "Shaping tomorrow's Internet with Artificial Intelligence",
-    "default_locale": "en",
-    "background" : {
-      "scripts" : ["scripts/background/eventPage.js"],
-      "persistent": false
-    },
-
-  "options_page": "views/settings.html",
-    "browser_action" :
-    {
-      "default_icon" : "assets/icon/pop.png",
-      "default_title" : "Social Street Smart",
-      "default_popup" : "views/popup.html"
-    },
-    "content_scripts" : [
-      {
-        "matches" : [
-          "http://*/*",
-          "https://*/*"
-        ],
-        "js" : [
-        "scripts/content/youtube.js","scripts/content/twitter.js","scripts/content/facebook.js","scripts/content/sss.js"
-        ],
-        "run_at" : "document_idle",
-        "all_frames" : false
-      }
-    ],
-"web_accessible_resources": [
-    "common/profanity_list_en.json"
-],
-
-    "permissions": [
-      "tabs","notifications","storage","contextMenus"
-    ],
-    "icons" : {
-      "36" : "assets/icon/36.png",
-      "48" : "assets/icon/48.png",
-      "72" : "assets/icon/72.png",
-      "96" : "assets/icon/96.png"
-    }
-}
-   
-=======
-{
-    "manifest_version": 2,
-    "version": "1.0.0",
-    "name": "Social Street Smart",
-    "short_name": "SSS", 
-    "description": "Shaping tomorrow's Internet with Artificial Intelligence",
-    "default_locale": "en",
-    "background" : {
-      "scripts" : ["scripts/background/eventPage.js"],
-      "persistent": false
-    },
-
-  "options_page": "views/settings.html",
-    "browser_action" :
-    {
-      "default_icon" : "assets/icon/pop.png",
-      "default_title" : "Social Street Smart",
-      "default_popup" : "views/popup.html"
-    },
-    "content_scripts" : [
-      {
-        "matches" : [
-          "http://*/*",
-          "https://*/*"
-        ],
-        "js" : [
-         "scripts/content/youtube_cb_hs.js","scripts/content/twitter_cb_hs.js","scripts/content/facebook_cb_hs.js","scripts/content/sss.js"
-        ],
-        "run_at" : "document_idle",
+        "run_at" : "document_end",
         "all_frames" : false
       },
       {
@@ -282,8 +186,7 @@
         "matches":[
           "https://twitter.com/*"
         ],
-        "js":[
-          "scripts/content/twitter.js"
+        "js":["scripts/content/twitter_cb_hs.js"
         ],
         "run_at" : "document_end",
         "all_frames" : false
@@ -308,7 +211,7 @@
 ],
 
     "permissions": [
-      "tabs","notifications","storage","http://13.233.115.232:8091/predict"
+      "tabs","notifications","storage","contextMenus","http://13.233.115.232:8091/predict","http://18.221.117.28:7001/predict"
     ],
     "icons" : {
       "36" : "assets/icon/36.png",
