--- a/server/Click-Bait/requirements.txt
+++ b/server/Click-Bait/requirements.txt
@@ -1,7 +1,10 @@
-Keras==2.2.0
-numpy==1.11.0
-tensorflow==1.9.0
-Flask==1.0.2
+Keras==2.2.4
+pytest==4.3.1
+numpy==1.16.4
 Flask_Cors==3.0.8
-pandas==0.17.1
-flask-swagger-ui==3.20.9
+Flask==1.1.1
+flask_swagger_ui==3.20.9
+tensorflow==1.14.0
+pandas==0.24.2
+gunicorn
+
