--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
-image: node:12.16.1
+image: ubuntu:20.04
 
 before_script:
-    - apt-get install xvfb
+    - apt-get update
+    - apt-get -y --force-yes install xvfb
     - npm install
 
 stages:
