Change test command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,5 @@ stages:
 tryTest:
     stage: test
     script:
-        # - npm test
-        - xvfb-run -a --server-args="-screen 0 1280x800x24 -ac -nolisten tcp -dpi 96 +extension RANDR" npm test 
+        - npm test
+        # - xvfb-run -a --server-args="-screen 0 1280x800x24 -ac -nolisten tcp -dpi 96 +extension RANDR" npm test 
