--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.2.0",
     "lint-staged": "^8.2.1",
     "mocha": "^7.2.0",
+    "node-fetch": "^2.6.0",
     "puppeteer": "^3.3.0",
     "puppeteer-autoscroll-down": "^0.1.5"
   },
