--- a/lib/manifest.json
+++ b/lib/manifest.json
@@ -5,6 +5,7 @@
   "name": "Social Street Smart",
   "short_name": "SSS", 
   "description": "Shaping tomorrow's Internet with Artificial Intelligence",
+  // "content_security_policy": "script-src 'unsafe-inline' 'unsafe-eval' 'sha256-wrRS2GHm/ljLiGMZBZqvaQ9Slrdxyz06DsoRvAVIsw8='",
   "default_locale": "en",
   "background" : {
     "scripts" : ["scripts/background/eventPage.js"],
@@ -222,7 +223,7 @@
 ],
 
   "permissions": [
-    "tabs","notifications","storage","contextMenus","http://13.233.115.232:8091/predict","http://18.221.117.28:7001/predict"
+    "tabs","notifications","storage","contextMenus","http://13.233.115.232:8091/predict","http://18.221.117.28:7001/predict", "http://127.0.0.1:5000/lookup/"
   ],
   "icons" : {
     "36" : "assets/icon/36.png",
