Updates unit testing to make it more reliable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,6 @@ tryTest:
     stage: test
     script:
         # - npm test
-        - xvfb-run -a --server-args="-screen 0 1280x800x24 -ac -nolisten tcp -dpi 96 +extension RANDR" npm test 
+        # - xvfb-run -a --server-args="-screen 0 1280x800x24 -ac -nolisten tcp -dpi 96 +extension RANDR" npm test
+        - chmod +x ./test.sh
+        - ./test.sh 
