--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   "rules": {
     "semi": 2,
     "quotes": [1, "single"],
-    "eqeqeq": 2,
+    // "eqeqeq": [2, "smart"],
     "strict": 1,
     "indent": [2, 2, {"SwitchCase": 1}]
   }
