--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shaping tomorrow's Internet with Artificial Intelligence",
   "repository": "https://gitlab.com/aossie/social-street-smart",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SerChirag",
   "license": "GPL-3.0",
@@ -24,12 +24,7 @@
     "husky": "^2.4.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "lint-staged": "^8.2.1",
-    "mocha": "^7.2.0",
-    "node-fetch": "^2.6.0",
-    "puppeteer": "^3.3.0",
-    "puppeteer-autoscroll-down": "^0.1.5"
+    "lint-staged": "^8.2.1"
   },
   "husky": {
     "hooks": {
