--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-minify": "^3.1.0",
-    "husky": "^2.4.1"
+    "husky": "^2.4.1",
+    "zip-folder": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
