:ambulance: Added gulp in pre-script since the pipeline can't find it

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ before_script:
     - apt -y --force-yes install nodejs
     - node -v
     - npm install
+    - npm install gulp
+    - npm install gulp-cli
 
 stages:
     # - test
