--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ before_script:
     - node -v
     - npm install
     - npm install -g gulp
+    - npm install chrome-webstore-upload
 
 stages:
     # - test
