Fixed the pipeline (hopefully)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,4 +32,4 @@ extDeploy:
     stage: deploy
     script:
         - gulp build
-        - CLIENT_ID=${CLIENT_ID} CLIENT_SECRET=${CLIENT_SECRET} EXTENSION_ID=${EXTENSION_ID} REFRESH_TOKEN=${REFRESH_TOKEN} node ./deploy.js
+        - node ./deploy.js
