:construction_worker: The pipeline now only deploys from master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,16 +20,18 @@ stages:
     # - test
     - deploy
     
-# extTest:
-#     stage: test
-#     script:
-#         # - npm test
-#         # - xvfb-run -a --server-args="-screen 0 1280x800x24 -ac -nolisten tcp -dpi 96 +extension RANDR" npm test
-#         - chmod +x ./test.sh
-#         - ./test.sh 
+extTest:
+    stage: test
+    script:
+        # - npm test
+        # - xvfb-run -a --server-args="-screen 0 1280x800x24 -ac -nolisten tcp -dpi 96 +extension RANDR" npm test
+        - chmod +x ./test.sh
+        - ./test.sh 
 
 extDeploy:
     stage: deploy
+    only:
+        - master
     script:
         - gulp build
         - node ./deploy.js
