--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ before_script:
     - curl -sL https://deb.nodesource.com/setup_12.x | bash -
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - apt-get -y --force-yes install ./google-chrome-stable_current_amd64.deb
+    - apt-get -y --force-yes install libxss1
     - apt -y --force-yes install nodejs
     - node -v
     - npm install
