added-ui-for-rating-and-context-analysis

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "lint-staged": {
     "*.js": [
-      "./node_modules/.bin/eslint --fix",
-      "git add"
+      "./node_modules/.bin/eslint --fix"
     ]
   }
+  
 }
